package developer data/mapping api snippets fix

--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api_js.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api_js.html
@@ -1,7 +1,11 @@
-<pre><code>
+<pre id="data-api-js"><code>
     var query = new PublicaMundi.Data.Query(endpoint);
     query.setCallback(callback);
     query.resource('{{res.id}}', 'table1').take(50);
-    query.execute();
+    query.execute({
+                success: onSuccess,
+                failure: onFailure,
+                complete: onComplete
+            });
 </code></pre>
 
