--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
@@ -1,9 +1,9 @@
 {% set res = {} %}
 {% for resource in pkg.resources %}
-    {% if resource.format == 'wms' and (resource.vectorstorer_resource or resource.rasterstorer_resource) %}
+ {% if resource.format == 'wms' and (resource.vectorstorer_resource or resource.rasterstorer_resource) %}
         {% do res.update(resource) %}
-    {% elif resource.format == 'wfs' and (resource.vectorstorer_resource) %}
-        {% do res.update(resource) %}
+    {#  {% elif resource.format == 'wfs' and (resource.vectorstorer_resource) %}
+    {% do res.update(resource) %} #}
     {% endif %}
 {% endfor %}
 
@@ -15,6 +15,7 @@
     <div id="collapse-js" class="accordion-body collapse">
         <div class="accordion-inner">
             {% if res %}
+            <label for="#data-api-js">{{_('You can copy/paste the snippet below to see it in action')}}</label>
             {% snippet 'package/snippets/developers/mapping_api_js.html', res=res %}
             {% else %}
             <strong>{{ _('The dataset contains no suitable data to use with the Mapping API')}}</strong><br><br>
