--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api_js.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api_js.html
@@ -1,4 +1,4 @@
-<pre id="data-api-js"><code>
+<pre><code>
     var query = new PublicaMundi.Data.Query(endpoint);
     query.setCallback(callback);
     query.resource('{{res.id}}', 'table1').take(50);
