--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html
@@ -31,10 +31,10 @@
                   target="_blank">{{ datastore_root_url + '/datastore_search_sql?sql=SELECT * from "' + res.id + '" WHERE title LIKE \'public\'' }}</a></code>
           </p>
           <strong>{{ _('Query example in javascript (using the PublicaMundi API)') }}</strong>
-          <label for="#data-api-js">{{_('You can copy/paste the snippet below to see it in action')}}</label>
+          <label>{{_('You can copy/paste the snippet below to see it in action')}}</label>
           {% snippet 'package/snippets/developers/data_api_js.html', res=res %}
         <strong>{{ _('Query example in JSON (using the PublicaMundi API)') }}</strong>
-          <label for="#data-api-json">{{_('You can copy/paste the snippet below to see it in action')}}</label>
+          <label>{{_('You can copy/paste the snippet below to see it in action')}}</label>
           {% snippet 'package/snippets/developers/data_api_json.html', res=res %}
 
         {% else %}
