--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
@@ -15,7 +15,7 @@
     <div id="collapse-js" class="accordion-body collapse">
         <div class="accordion-inner">
             {% if res %}
-            <label for="#data-api-js">{{_('You can copy/paste the snippet below to see it in action')}}</label>
+            <label>{{_('You can copy/paste the snippet below to see it in action')}}</label>
             {% snippet 'package/snippets/developers/mapping_api_js.html', res=res %}
             {% else %}
             <strong>{{ _('The dataset contains no suitable data to use with the Mapping API')}}</strong><br><br>
