template bug fix

--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/data_api.html
@@ -41,7 +41,7 @@
         <strong>{{ _('Dataset contains no datastore resources') }}</strong><br><br>
         {% endif %}
             {% set data_api_link = h.redirect_wp('applications/data-api') %}
-                <strong>{%trans%}You can find detailed Data API demos <a href="{{data_api_link }}" target="_blank">here</a>{%endtrans%}
+            <strong>{%trans%}You can find detailed Data API demos <a href="{{data_api_link }}" target="_blank">here</a>{%endtrans%}</strong>
         </div>
 
         <!-- {#<br>
