--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
@@ -10,9 +10,9 @@
 
 <div class="accordion-group">
     <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-dev" href="#collapse-js">{{ _('Mapping API') }} &raquo;</a>
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-dev" href="#collapse-querying-mapi">{{ _('Mapping API') }} &raquo;</a>
     </div>
-    <div id="collapse-js" class="accordion-body collapse">
+    <div id="collapse-querying-mapi" class="accordion-body collapse">
         <div class="accordion-inner">
             {% if res %}
             <label>{{_('You can copy/paste the snippet below to see it in action')}}</label>
@@ -24,6 +24,7 @@
             <strong>{%trans%}You can find detailed Mapping API demos <a href="{{mapping_api_link }}" target="_blank">here</a>{%endtrans%}
  
             </strong>
+        </div>
     </div>
 </div>
 
