Re-implement deduce_fields, update tests (wip).

--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-foo-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-foo-datasetform.html
@@ -5,7 +5,7 @@
         { 
             'name': 'basic',
             'heading': _('Basic Foo'),
-            'fields': ['title', 'url', 'notes', 'baz', 'tags', 'thematic_category']
+            'fields': ['title', 'url', 'description', 'baz', 'tags', 'thematic_category']
         },
         { 
             'name': 'contact',
