fixed imis logo link

--- a/ckanext/publicamundi/themes/geodata/templates/home/index.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/index.html
@@ -142,8 +142,8 @@
     {% block feedback %}
 
                 <div class="feedback-form">
-                    <a href="{{ h.feedback_form() }}"><button class="btn btn-primary">{{_('Leave your feedback')}}</button></a><a href="{{h.feedback_form()}}"><div class="imis-logo-side"></div></a>
-                                    </div>
+                    <a href="{{ h.feedback_form() }}"><button class="btn btn-primary">{{_('Leave your feedback')}}</button></a><a href="http://www.imis.athena-innovation.gr"><div class="imis-logo-side"></div></a>
+                </div>
             {% endblock %}
             {% endblock %}
 
