fixed concatenation error in endpoint popup template

--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/endpoint_wfs_dialog.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/endpoint_wfs_dialog.html
@@ -1,5 +1,5 @@
 {% set layer = res.wfs_layer or '' %}
-{% set getfeature_url = res.wfs_server or '' + '?service=WFS&request=GetFeature&version=2.0.0&outputFormat=json&srsName=EPSG:4326&typeNames='+ layer +'&count=100'  %}
+{% set getfeature_url = res.wfs_server or '' ~ '?service=WFS&request=GetFeature&version=2.0.0&outputFormat=json&srsName=EPSG:4326&typeNames='~ layer ~'&count=100'  %}
 
 <div class="modal hide no-fade" id="endpoint_wfs_dialog" tabindex="-1" aria-hidden="true" > 
     <div class="modal-header">
