--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/endpoint_wms_dialog.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/endpoint_wms_dialog.html
@@ -1,12 +1,12 @@
 {% set inspire_bbox = pkg.inspire.bounding_box[0] %}
 {% if inspire_bbox %}
-    {% set bbox = inspire_bbox.sblat + ',' + inspire_bbox.wblng + ',' + inspire_bbox.nblat + ',' + inspire_bbox.eblng %}
+    {% set bbox = inspire_bbox.sblat ~ ',' ~ inspire_bbox.wblng ~ ',' ~ inspire_bbox.nblat ~ ',' ~ inspire_bbox.eblng %}
 {% else %}
     {% set bbox = '38.007621,23.827829,38.200911,23.98585'  %}
 {% endif %}
 
 {% set layer = res.wms_layer or '' %}
-{% set getmap_url = res.wms_server or '' + '?service=WMS&request=GetMap&version=1.3.0&WIDTH=256&HEIGHT=256&format=image/png&srs=EPSG:4326&bbox='+ bbox + '&layers='+ layer  %}
+{% set getmap_url = res.wms_server or '' ~ '?service=WMS&request=GetMap&version=1.3.0&WIDTH=256&HEIGHT=256&format=image/png&srs=EPSG:4326&bbox='~ bbox ~ '&layers=' ~ layer  %}
 
 <div class="modal hide no-fade" id="endpoint_wms_dialog" tabindex="-1" aria-hidden="true" > 
     <div class="modal-header">
