--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/endpoint_wms_dialog.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/endpoint_wms_dialog.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% set layer = res.wms_layer or '' %}
-{% set getmap_url = res.wms_server or '' ~ '?service=WMS&request=GetMap&version=1.3.0&WIDTH=256&HEIGHT=256&format=image/png&srs=EPSG:4326&bbox='~ bbox ~ '&layers=' ~ layer  %}
+{% set getmap_url = res.wms_server ~ '?service=WMS&request=GetMap&version=1.3.0&WIDTH=256&HEIGHT=256&format=image/png&srs=EPSG:4326&bbox='~ bbox ~ '&layers=' ~ layer  %}
 
 <div class="modal hide no-fade" id="endpoint_wms_dialog" tabindex="-1" aria-hidden="true" > 
     <div class="modal-header">
