--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/endpoint_wfs_dialog.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/endpoint_wfs_dialog.html
@@ -1,6 +1,6 @@
 {% set layer = res.wfs_layer or '' %}
 {% set getfeature_url = res.wfs_server ~ '?service=WFS&request=GetFeature&version=2.0.0&outputFormat=json&srsName=EPSG:4326&typeNames='~ layer ~'&count=100'  %}
-{% set getcap_url = res.wfs_server ~ '?service=WFS&version=2.0.0&request=GetCapabilities %}
+{% set getcap_url = res.wfs_server ~ '?service=WFS&version=2.0.0&request=GetCapabilities' %}
 
 <div class="modal hide no-fade" id="endpoint_wfs_dialog" tabindex="-1" aria-hidden="true" > 
     <div class="modal-header">
