--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_table.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_table.html
@@ -1,16 +1,13 @@
 <section class="additional-info">
   
-  {%- with 
-      obj = pkg_dict.get(pkg_dict.dataset_type),
-      dtspec = h.dataset_types().get(pkg_dict.dataset_type)
-  -%}
+  {%- with obj = pkg_dict.get(pkg_dict.dataset_type) -%}
   {%- if obj -%}
   <header>
     <h3 class="inline">{{ _('Metadata') }}</h3>
     
     <div class="download-links pull-right">
       <div class="btn-group">
-        <a class="btn btn-primary" href="{{ h.get_primary_metadata_url(pkg_dict.download_links, dtspec.title) }}"
+        <a class="btn btn-primary" href="{{ h.get_primary_metadata_url(pkg_dict.download_links, (pkg_dict.dataset_type|title)) }}"
           ><i class="icon-download"></i> {{ _('Download') }}</a>
         <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
           <span class="caret"></span>
@@ -27,7 +24,7 @@
         </ul>
       </div>
       <div class="metadata-label pull-left">
-        <span>{{ dtspec.title|title|upper }}</span> <i class="icon-ok-sign"></i>
+        <span>{{ pkg_dict.dataset_type|title|upper }}</span> <i class="icon-ok-sign"></i>
       </div>
     </div>
   </header>
@@ -82,8 +79,8 @@
   {{ h.markup_for('read:table', obj, errors=none, name_prefix='', data=data) }}
   {% endwith %}
 
-  {%- endif -%} {# if obj #}
-  {%- endwith -%} {# obj, dtspec #}
+  {%- endif -%} {# obj #}
+  {%- endwith -%} {# obj #}
 
 </section>
 
