added default option for active layers in map admin

--- a/ckanext/publicamundi/themes/geodata/templates/user/dashboard_maps.html
+++ b/ckanext/publicamundi/themes/geodata/templates/user/dashboard_maps.html
@@ -115,9 +115,10 @@
                 <td></td>
             </thead>
             <tbody>
-              <!--  <tr id="map-options-default">
+                <tr id="map-options-default">
+                    <td>{{_('default')}}</td>
               </tr>
-              -->
+            
             <tr id="map-options-activate">
                 <td>{{_('active')}}</td>
             </tr>
