Display multilingual search results
Try to translate basic fields (title, notes) for each package item in
search results.

--- a/ckanext/publicamundi/templates/package/snippets/multilingual_info.html
+++ b/ckanext/publicamundi/templates/package/snippets/multilingual_info.html
@@ -5,7 +5,7 @@
      read_url = h.url_for(controller='package', action='read', id=pkg.name, locale=source_lang)%}
 <div class="info multilingual-info">
     <i class="icon-info-sign"></i>&nbsp;
-    This dataset is translated to {{h.language_name(target_lang)}} ({{target_lang|upper}}).
-    The original version in {{h.language_name(source_lang)}} ({{source_lang|upper}}) is <a href="{{read_url}}">here</a>
+    This dataset is translated from {{h.language_name(source_lang)}} ({{source_lang|upper}}) to {{h.language_name(target_lang)}} ({{target_lang|upper}}).
+    The original version is <a href="{{read_url}}">here</a>.
 </div>
 {% endwith %}
