--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_table.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_table.html
@@ -32,6 +32,7 @@
   {% with 
      data = { 
         'max_depth': 2,
+        'more': True,
         'extras': [
             {
                 'title': _('State'),
