Manipulate dataset translations with a table widget

--- a/ckanext/publicamundi/templates/package/snippets/fields/read-text-dd.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-text-dd.html
@@ -1,9 +1,9 @@
 <span class="{{ classes|join(' ') }} text">
-    {% if value %}
+    {%- if value -%}
     {{- value -}}
     {% elif field.default %}
     {{- field.default -}}
     {% else %}
     <i>{{ _('n/a') }}</i>
-    {% endif %}
+    {%- endif -%}
 </span>
