--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-read-object-dl.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-read-object-dl.html
@@ -2,7 +2,7 @@
   {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
   <dl>
     {% for k, f in fields.items() -%}
-    <dt data-name="{{ k }}">{{ f.field.title }}</dt>
+    <dt data-key="{{k}}">{{ f.field.title }}</dt>
     <dd>{{ f.markup }}</dd>
     {%- endfor %}
   </dl>
