--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -1639,6 +1639,26 @@ a.tag:hover{
     //border: 3px #4E59A4 solid;
 
 }
+.btn-mini {
+    font-family: 'ACMuli';
+    border-radius: 0;
+    padding: 0 6px;
+    border: 2px #4E59A4 solid;
+    background: #fff;
+    color: #4E59A4;
+    text-shadow: none;
+    box-shadow: none;
+}
+.btn-small {
+    font-family: 'ACMuli';
+    border-radius: 0;
+    padding: 2px 9px;
+    border: 2px #4E59A4 solid;
+    background: #fff;
+    color: #4E59A4;
+    text-shadow: none;
+    box-shadow: none;
+}
 .btn:hover, .btn-hover{
     border-radius: 0;
     background: #4E59A4;
@@ -1719,12 +1739,54 @@ a.tag:hover{
     color: #C43210;
     background: #fff;
  }
- .dropdown-menu .btn, .dropdown-menu .btn-mini{
+
+ /* Bootstrap toggle */
+
+.toggle .toggle-handle.btn{
+    background: #4E59A4;
+}
+.toggle .btn{
+    border: 1px;
+}
+.toggle.btn-xs{
+    min-width: 33px;
+    min-height: 15px;
+}
+.toggle-handle{
+    width: 4px;
+}
+.toggle .btn:hover{
+}
+.toggle.btn-xs{
+    padding: 4px 8px;
+}
+
+.toggle .btn:hover{
+}
+.toggle label:after{
+    content: "";
+}
+
+.btn-translation{
+    color: #C6B489;
+    border: 2px #C6B489 solid;
+}
+.btn-translation:hover{
+    background: #C6B489;
+    border: 2px #C6B489 solid;
+}
+.btn-translation:focus {
+    color: #fff;
+    background: #C6B489;
+    border: 2px #C6B489 solid;
+}
+
+.dropdown-menu .btn, .dropdown-menu .btn-mini{
      border: none !important;
- }
- .btn [class^="icon-"]{
+}
+.btn [class^="icon-"]{
      margin-right:0;
- }
+}
 .open .caret{
     border-top-color: #fff !important;
     border-bottom-color: #fff !important;
