--- a/ckanext/publicamundi/templates/package/edit_base.html
+++ b/ckanext/publicamundi/templates/package/edit_base.html
@@ -5,7 +5,7 @@
 
 {% block content_primary_nav %}
     {{ super() }}
-    {{ h.build_nav_icon('dataset_translate', _('Translate'), name_or_id=pkg.name, icon='flag') }}
+    {{ h.build_nav_icon('dataset_translate', _('Translate'), name_or_id=pkg.name, icon='flag-alt') }}
 {% endblock %}
 
 
