--- a/ckanext/publicamundi/templates/package/snippets/package_form.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_form.html
@@ -27,8 +27,12 @@ then itself be extended to add/remove blocks of functionality. #}
   {% block warnings %}
   {% if h.is_multilingual_dataset and data.language and (c.target_language != data.language) %}
   <div class="alert">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    You are about to edit in a language ({{data.language|upper}}) different than your active language ({{c.target_language|upper}}).
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      {% set data_language = data.language|upper %}
+      {% set target_language = c.target_language|upper %}
+      {% trans %}
+      You are about to edit in a language ({{data_language}}) different than your active language ({{target_language}}).
+    {% endtrans %}
   </div>
   {% endif %}
   {% endblock %} {# warnings #}
