updated multilingual dataset translations

--- a/ckanext/publicamundi/templates/package/snippets/package_translation_panel.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_translation_panel.html
@@ -38,7 +38,7 @@
 {% endwith %} {# source_language, target_language #}
 
 <div class="legend">
-    <span class="title">Legend:</span>
+    <span class="title">{{ _('Legend')}}:</span>
     <span class="samples">
         <span class="color sample translatable-text translation-status-clean"></span>
         <span class="description" title="{{ _('A translatable field, not touched during this session')}}">{{_('Clean')}}</span>
