--- a/ckanext/publicamundi/themes/geodata/templates/snippets/language_selector_simple.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/language_selector_simple.html
@@ -4,7 +4,7 @@
 {% for locale in h.get_available_locales() %}
 {% if locale == current_lang %}
 <a href="{{ h.url_for(current_url, locale=locale) }}"><span class="down-arrow">
-            {{ locale.display_name or locale.english_name }}</span></a>
+            {{ locale.display_name|capitalize or locale.english_name|capitalize }}</span></a>
 {% endif %}
 {% endfor %}
 
@@ -12,7 +12,7 @@
     {% for locale in h.get_available_locales() %}
     {% if locale != current_lang %}
     <li value="{% url_for current_url, locale=locale %}"><a href="{{ h.url_for(current_url, locale=locale) }}"><span>
-        {{ locale.display_name or locale.english_name }}</span></a></li>
+        {{ locale.display_name|capitalize  or locale.english_name|capitalize }}</span></a></li>
     {% endif %}
     {% endfor %}
     </ul>
