added missing translations

--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-list-contacts-inspire.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-list-contacts-inspire.html
@@ -1,15 +1,14 @@
-{%- set 
-    messages = 
+{%- set messages = 
     {
-        'add-label': 'New',
-        'add-title': 'Add another contact', 
-        'clear-label': 'Clear all',
-        'clear-title': 'Clear all contacts!',
-        'reorder-label': 'Reorder',
-        'reorder-title': 'Reorder the following contacts',
+        'add-label': _('New'),
+        'add-title': _('Add another contact'), 
+        'clear-label': _('Clear all'),
+        'clear-title': _('Clear all contacts!'),
+        'reorder-label': _('Reorder'),
+        'reorder-title': _('Reorder the following contacts'),
         'add-description': none,
-        'maxlength-alert': 'You cannot add more than {{maxlength}} contacts',
-        'clear-alert': 'Are you sure you want to clear all ({{num}}) contacts ?',
+        'maxlength-alert': _('You cannot add more than {{maxlength}} contacts'),
+        'clear-alert': _('Are you sure you want to clear all ({{num}}) contacts ?'),
     } 
 -%}
 
