--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-list-resource_language-inspire.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-list-resource_language-inspire.html
@@ -20,6 +20,6 @@
         />
         {% endfor -%}
         <div class="help-block"
-         >The resource language information is automatically extracted from resource metadata and is not to be supplied here.</div>
+            >{{ _('The resource language information is automatically extracted from resource metadata and is not to be supplied here.')}}</div>
     </div>
 </div>
