fixed styling and missing html buttons

--- a/ckanext/publicamundi/analytics/templates/main.html
+++ b/ckanext/publicamundi/analytics/templates/main.html
@@ -51,6 +51,7 @@
     <div id="services-access-graph" class="amcharts-graph">
         <img src="/loading.gif"/>
     </div>
+    <button id="service-cache" class="btn">Self-adjust service cache</button>
 </div>
 <div id="rasdaman-access-graph-container">
     <h1> rasdaman access statistics </h1>
@@ -58,6 +59,7 @@
     <div id="rasdaman-access-graph" class="amcharts-graph">
         <img src="/loading.gif"/>
     </div>
+    <button id="worker-process" class="btn">Self-adjust Worker Processes</button>
 </div>
 <div id="geoserver-access-graph-container">
     <h1> Geoserver access statistics </h1>
