--- a/ckanext/publicamundi/themes/geodata/templates/snippets/contact.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/contact.html
@@ -1,6 +1,7 @@
 <div class="section-contact">
-    <a class="btn btn-primary contact-button" href="#" data-toggle="modal" data-module-pkg-id="{{pkg.id}}" data-target="#contact-form-modal" data-module-pkg-title="{{pkg.title}}">
+    <a class="btn btn-primary contact-button" href="#" data-module="contact-form" data-module-pkg-id="{{pkg.id}}" data-module-pkg-title="{{pkg.title}}">
    <i class="icon-envelope"></i>
-            {% trans %}<span class='contact-term'>Contact</span>{% endtrans %} </a>
-    {% snippet 'snippets/contact_form.html', pkg=pkg %}
+   {% trans %}<span class='contact-term'>Contact</span>{% endtrans %} </a>
+
+ {#    {% snippet 'snippets/contact_form.html', pkg=pkg %} #}
 </div>
